# onelineattime

./: .gitignore  Makefile  Readme.md  configure  configure.ac  main.c
installsh/: Makefile  embeder.sh  installer.sh.in  installerconf
src/: 1lineattime.c  1lineattime.h  Makefile.am  Makefile.in  io.h  main.c  opts.h  terminal.c  terminal.h
src/.deps/: 1lineattime.Po  io.Po  main.Po  opts.Po  terminal.Po
srcs/: io.c  opts.c
